--- a/public/stylesheets/learningrails.css
+++ b/public/stylesheets/learningrails.css
@@ -42,7 +42,24 @@ body {
     margin: 0;
     padding: 2px;
 }
+#pagebody {
+	margin-right: 200px;
+}
+#commentf {
+	padding: 20px 10px;
+	width: 350px;
+	float: center;
+	background-color: #ddd;
+	border: 1px solid #333;
+}
 
+#comment {
+	padding: 20px 10px;
+	width: 350px;
+	float: center;
+	background-color: #ddd;
+
+}
 /* Navigation Bar */
 
 #navbar ul {
@@ -50,7 +67,7 @@ body {
     margin: 0;
     background-color: #999;
     color: White;
-    float: left;
+    float: right;
     width: 100%;
     list-style: none;
     font-weight: bold;
@@ -60,7 +77,7 @@ body {
 #navbar ul li { 
     display: inline;
     color: White;
-    float: left;
+    float: right;
     border-right: 1px solid #333;
     font-family: arial, helvetica, sans-serif;
 }
@@ -89,8 +106,8 @@ body {
 }
 #subnav {
 	width: 160px;
-	float: left;
-	margin: 0 20px 50px -10px;
+	float: right;
+	margin: 0 -10px 50px 20px;
 }
 #subnav ul {
     list-style: none;
